# localcode

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  install.sh  pyproject.toml
benchmark/pacman/: README.md
benchmark/pacman/localcode/: index.html
benchmark/pacman/localcode/game/: data.js  engine.js  main.js  renderer.js
benchmark/pacman/opencode/: pacman.html
benchmark/pacman/pi/: pacman.html
benchmark/pacman/qwen-code/: index.html
calc/: app.py  calculator.py
localcode/: __init__.py  art.py  backend.py  cli.py  clipboard.py  config.py  loop.py  parser.py  profile.py  prompt.py  store.py  tools.py  tui.py  wizard.py
